--- a/superset-sparql/notebooks/SQL2SPARQL.ipynb
+++ b/superset-sparql/notebooks/SQL2SPARQL.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7879f2e",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "955278a6",
    "metadata": {},
@@ -18,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "4872cc35",
    "metadata": {},
    "outputs": [],
@@ -49,6 +51,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3955030d",
    "metadata": {},
@@ -70,6 +73,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "faf909da",
    "metadata": {},
@@ -78,6 +82,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1791de3b",
    "metadata": {},
@@ -206,6 +211,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "783bfd4d",
    "metadata": {},
@@ -641,6 +647,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c777c1c0",
    "metadata": {},
@@ -661,7 +668,7 @@
   "kernelspec": {
    "display_name": "ironhack",
    "language": "python",
-   "name": "ironhack"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
